# libtinynotify

./: Makefile.am  configure.ac
doc/: libtinynotify-docs.sgml  libtinynotify-sections.txt
lib/: common.c  common_.h  error.c  error.h  event.c  event.h  event_.h  features.h  notification.c  notification.h  notification_.h  session.c  session.h  session_.h  tinynotify.c  tinynotify.h
